# corsa-bind

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsgo_ref.lock.toml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-npm.yml  publish-rust.yml
bench/: package.json
bench/cli_compare/: eslint.config.mjs  package-lock.json  package.json
bench/fixtures/: ts_bench_report.json
bench/src/: api_client.bench.ts  corsa_oxlint.bench.ts  corsa_oxlint_rules.bench.ts  npm_release_utils.test.ts  publish_workflows.test.ts  release_manifest.test.ts  report_guard.test.ts  support.ts  typescript_oxlint.bench.ts  typescript_oxlint_rules.bench.ts
crates/corsa/: Cargo.toml
crates/corsa_bind_ref/: Cargo.toml
crates/tsgo_rs/: Cargo.toml
crates/tsgo_rs_client/: Cargo.toml
crates/tsgo_rs_core/: Cargo.toml
crates/tsgo_rs_jsonrpc/: Cargo.toml
crates/tsgo_rs_lsp/: Cargo.toml
crates/tsgo_rs_orchestrator/: Cargo.toml
crates/tsgo_rs_orchestrator/src/: lib.rs
crates/tsgo_rs_orchestrator/src/orchestrator/: api.rs  distributed.rs  mod.rs
crates/tsgo_rs_ref/: Cargo.toml
crates/tsgo_rs_runtime/: Cargo.toml
docs/: benchmarking_guide.md  ci_guide.md  corsa_dependency.md  performance.md  production_readiness.md  project_guide.md  release_guide.md  supply_chain_policy.md  support_policy.md  tsgo_dependency.md
examples/: README.md  package.json  shared.ts  smoke.ts
examples/corsa_oxlint/: shared.ts
examples/node/: unsafe_type_flow.ts
examples/nodejs/: checker_queries.ts  distributed_orchestrator.ts  minimal_start.ts  mock_client.ts  raw_calls.ts  real_snapshot.ts  unsafe_type_flow.ts  virtual_document.ts
nix/vite-plus/: package.json
scripts/: bench_bindings.ts  build_corsa.ts  build_tsgo.ts  npm_release_utils.d.mts  npm_release_utils.mjs  npm_release_utils.ts  print_napi_build_matrix.ts  publish_npm.mjs  publish_npm.ts  publish_rust.ts  release.ts  release_dry_run.mjs  release_dry_run.ts  release_manifest.ts  run_rust_examples.ts  setup_npm_trusted_publish.ts
src/bindings/c/corsa_ffi/: Cargo.toml
src/bindings/c/corsa_ffi/include/: corsa_utils.h
src/bindings/c/corsa_ffi/src/: api_client.rs  error.rs  lib.rs  tests.rs  types.rs  utils.rs  virtual_document.rs
(+240 files in other folders)
