[workspace]
members = [
  "crates/tsgo_rs_core",
  "crates/tsgo_rs_jsonrpc",
  "crates/tsgo_rs_client",
  "crates/tsgo_rs_lsp",
  "crates/tsgo_rs_orchestrator",
  "crates/tsgo_rs_runtime",
  "crates/tsgo_rs_ref",
  "crates/tsgo_rs",
  "npm/tsgo_rs_node",
]
resolver = "2"

[workspace.package]
documentation = "https://github.com/ubugeeei/tsgo-rs/tree/main/docs"
homepage = "https://github.com/ubugeeei/tsgo-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ubugeeei/tsgo-rs"
rust-version = "1.85"

[workspace.dependencies]
bumpalo = { version = "3", features = ["collections"] }
compact_str = { version = "0.8", features = ["serde"] }
log = "0.4"
memchr = "2"
phf = { version = "0.11", features = ["macros"] }
rustc-hash = "2"
smallvec = { version = "1", features = ["serde"] }
